--- a/style.css/style.css
+++ b/style.css/style.css
@@ -162,13 +162,13 @@
 }
 .our-performance {
 	display: grid;
-	grid-template-rows: 1fr 1fr;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	gap: 15px;
-	max-width: 1198px;
-	width: 100%;
+	grid-template-rows: 27px 142px 24px 45px 155px;
+	grid-template-columns: 238px 78px 243px 71px 230px 69px 282px;
+	/* gap: 15px; */
 }
 .our-performance__experience {
+	grid-row: 2;
+	grid-column: 1;
 	width: 168px;
 	border-radius: 10px;
 }
@@ -203,34 +203,48 @@
 	color: var(--black);
 }
 .our-performance__pupils {
+	grid-row: 2;
+	grid-column: 3;
 	width: 243px;
 	border-radius: 10px;
 }
 .our-performance__plane {
+	grid-row: 1 / 2;
+	grid-column: 5;
 	width: 230px;
 	height: 169px;
 	border-radius: 20px;
 	background: url('../image/paper-aircraft.jpg') center / 230px 169px no-repeat var(--white);
 }
 .our-performance__audience {
+	grid-row: 2 / 3;
+	grid-column: 7;
 	width: 266px;
 	border-radius: 10px;
 }
 .our-performance__phone {
+	grid-row: 3 / 5;
+	grid-column: 1;
 	width: 237px;
 	height: 225px;
 	border-radius: 20px;
 	background: url('../image/phone.jpg') center bottom / 228px 203px no-repeat var(--white);
 }
 .our-performance__more {
+	grid-row: 5;
+	grid-column: 3;
 	width: 273px;
 	border-radius: 10px;
 }
 .our-performance__portfolio {
+	grid-row: 5;
+	grid-column: 5;
 		width: 276px;
 		border-radius: 10px;
 }
 .our-performance__accaunt {
+	grid-row: 5;
+	grid-column: 7;
 	width: 276px;
 	height: 147px;
 	border-radius: 20px;
@@ -255,56 +269,60 @@
 	color: var(--white);
 }
 .gifts__wrap {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 8px 13px;
+	display: grid;
+	grid-template-rows: 239px 239px 151px;
+	grid-template-columns: repeat(4,  1fr);
+	gap: 13px;
 	max-width: 1201px;
+	width: 100%;
 }
-.gifts__wrapper {
+.unique-book {
+	grid-row: 1;
+	grid-column: 1;
 	display: flex;
-	flex: 0 1 295px;
-	flex-direction: column;
-	gap: 8px;
-}
-.gifts__wrapper_big {
-	flex: 0 1 585px;
-	min-height: 373px;
-	border-radius: 20px;
-	background: url('../image/macbook-pro-14.jpg') center / 539px 305px no-repeat var(--white);
-}
-.gifts__wrapper_width {
-	flex: 0 1 1201px;
-}
-.gifts__wrapper_width:hover {
-	cursor: pointer;
-	animation: wobble-hor-bottom 0.8s linear 0.5s 2 both;
-}
-.gifts__wrapper-inner {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	min-height: 239px;
+	flex-wrap: wrap;
 	border-radius: 10px;
 	background-color: var(--white);
 }
-.gifts__wrapper-inner:hover {
+.unique-book:hover {
 	cursor: pointer;
 	animation: wobble-hor-bottom 0.8s linear 0.5s 2 both;
 }
-.gifts__subtitle {
+.unique-book__subtitle {
 	font-family: 'SuisseIntl', sans-serif;
 	font-size: 18px;
 	font-weight: 600;
 	line-height: 21px;
 	color: var(--cornflower-blue);
 }
-.unique-book {
+.unique-book_change {
 	max-width: 224px;
 	text-align: center;
 }
-.gifts__subdescription {
+.bot-block {
+	grid-row: 2;
+	grid-column: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	border-radius: 10px;
+	background-color: var(--white);
+}
+.bot-block:hover {
+	cursor: pointer;
+	animation: wobble-hor-bottom 0.8s linear 0.5s 2 both;
+}
+.bot-block__subtitle {
+	font-family: 'SuisseIntl', sans-serif;
+	font-size: 18px;
+	font-weight: 600;
+	line-height: 21px;
+	color: var(--cornflower-blue);
+}
+.bot-block__subdescription {
 	font-family: 'SuisseIntl', sans-serif;
 	font-size: 14px;
 	font-weight: 400;
@@ -312,36 +330,100 @@
 	letter-spacing: 0em;
 	color: var(--black);
 }
-.text-gift {
+.bot-block_change {
 	margin-top: 13px;
 	max-width: 204px;
 	text-align: center;
 }
-.tasks {
-	max-width: 232px;
+.computer {
+	grid-row: 1 / 3;
+	grid-column: 2 / 4;
+	border-radius: 20px;
+	background: url('../image/macbook-pro-14.jpg') center / 539px 305px no-repeat var(--white);
+}
+.computer:hover {
+	cursor: pointer;
+	animation: wobble-hor-bottom 0.8s linear 0.5s 2 both;
+}
+.material {
+	grid-row: 1;
+	grid-column: 4;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	border-radius: 10px;
+	background-color: var(--white);
+}
+.material:hover {
+	cursor: pointer;
+	animation: wobble-hor-bottom 0.8s linear 0.5s 2 both;
+}
+.material__subtitle {
+	font-family: 'SuisseIntl', sans-serif;
+	font-size: 18px;
+	font-weight: 600;
+	line-height: 21px;
+	color: var(--cornflower-blue);
 	text-align: center;
 }
-.text-lessons {
+.material__subtitle_change {
+	max-width: 232px;
+}
+.investments {
+	grid-row: 2;
+	grid-column: 4;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	border-radius: 10px;
+	background-color: var(--white);
+}
+.investments:hover {
+	cursor: pointer;
+	animation: wobble-hor-bottom 0.8s linear 0.5s 2 both;
+}
+.investments__subtitle {
+	font-family: 'SuisseIntl', sans-serif;
+	font-size: 18px;
+	font-weight: 600;
+	line-height: 21px;
+	color: var(--cornflower-blue);
+	text-align: center;
+}
+.investments__subtitle_change {
 	margin-bottom: 15px;
 	max-width: 246px;
-	text-align: center;
 }
-.paragraph-lessons {
+.investments__subdescription {
+	font-family: 'Suisse Intl', sans-serif;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 400;
+	text-align: center;
+	color: var(--black);
+}
+.investments__subdescription-change {
 	max-width: 211px;
-	text-align: center;
 }
-.gifts__inner-bottom {
+.portfolio {
+	grid-row: 3;
+	grid-column: 1 / 5;
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
 	gap: 71px;
-	padding: 44px 0px;
-	max-width: 1200px;
 	background: var(--white);
 	border-radius: 20px;
 }
-.gifts__subtitle-bottom {
+.portfolio:hover {
+	cursor: pointer;
+	animation: wobble-hor-bottom 0.8s linear 0.5s 2 both;
+}
+.portfolio__subtitle {
 	max-width: 434px;
 	font-family: 'SuisseIntl', sans-serif;
 	font-size: 18px;
@@ -349,13 +431,12 @@
 	line-height: 21px;
 	color: var(--cornflower-blue);
 }
-.gifts__subdescription-bottom {
+.portfolio__subdescription {
 	max-width: 406px;
 	font-family: 'SuisseIntl', sans-serif;
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 16px;
-	letter-spacing: 0em;
 	color: var(--black);
 }
 
